# advent-of-code

./: .gitignore  LICENSE
2024/day1/: solution.hs
2024/day10/: day10.cabal  solution.hs
2024/day11/: day11.cabal  solution.hs
2024/day12/: day12.cabal  solution.hs
2024/day13/: day13.cabal  solution.hs
2024/day14/: day14.cabal  solution.hs
2024/day15/: day15.cabal  solution.hs
2024/day16/: day16.cabal  solution.hs
2024/day17/: day17.cabal  solution.hs
2024/day18/: day18.cabal  solution.hs
2024/day19/: day19.cabal  solution.hs
2024/day2/: solution.hs
2024/day20/: day20.cabal  solution.hs
2024/day21/: day21.cabal  solution.hs
2024/day22/: day22.cabal  solution.hs
2024/day23/: day23.cabal  solution.hs
2024/day24/: day24.cabal  solution.hs
2024/day25/: day25.cabal  solution.hs
2024/day3/: solution.hs
2024/day4/: solution.hs
2024/day5/: day5.cabal  solution.hs
2024/day6/: day6.cabal  solution.hs
2024/day7/: day7.cabal  solution.hs
2024/day8/: day8.cabal  solution.hs
2024/day9/: solution.hs
2025/day01/src/: main.rs
2025/day02/src/: main.rs
2025/day03/src/: main.rs
2025/day04/src/: main.rs
2025/day05/inputs/: test.txt
2025/day05/src/: main.rs
2025/day06/src/: main.rs
2025/day07/src/: main.rs
2025/day08/: Cargo.toml
2025/day08/src/: main.rs
2025/day09/: Cargo.toml
2025/day09/src/: main.rs
2025/day10/: Cargo.toml
2025/day10/src/: main.rs
2025/day11/src/: main.rs
2025/day12/src/: main.rs
2025/utils/src/: lib.rs
