cabal-version:      3.0
name:               day14
version:            0.1.0.0
common warnings
    ghc-options: -Wall
executable day14
    import:           warnings
    main-is:          solution.hs
    build-depends:    base ^>=4.17.2.1
                    , regex-tdfa ^>= 1.3.2
                    , containers ^>= 0.7
    hs-source-dirs:   .
    default-language: Haskell2010
