cabal-version:      3.0
name:               day15
version:            0.1.0.0
common warnings
    ghc-options: -Wall
executable day15
    import:           warnings
    main-is:          solution.hs
    build-depends:    base ^>=4.17.2.1
                    , split ^>=0.2
                    , containers ^>= 0.7
    hs-source-dirs:   .
    default-language: Haskell2010
