cabal-version:      3.0
name:               day16
version:            0.1.0.0
common warnings
    ghc-options: -Wall
executable day16
    import:           warnings
    main-is:          solution.hs
    build-depends:    base ^>=4.17.2.1
                    , pqueue ^>=1.5
                    , containers ^>=0.7
                    , vector ^>=0.13
    hs-source-dirs:   .
    default-language: Haskell2010
