cabal-version:      3.0
name:               day17
version:            0.1.0.0
common warnings
    ghc-options: -Wall
executable day17
    import:           warnings
    main-is:          solution.hs
    build-depends:    base
                    , regex-tdfa
                    , vector
    hs-source-dirs:   .
    default-language: Haskell2010
