cabal-version:      3.0
name:               day18
version:            0.1.0.0
common warnings
    ghc-options: -Wall
executable day18
    import:           warnings
    main-is:          solution.hs
    build-depends:    base
                    , containers
                    , pqueue
                    , split
    hs-source-dirs:   .
    default-language: Haskell2010
