cabal-version:      3.0
name:               day20
version:            0.1.0.0
common warnings
    ghc-options: -Wall
executable day20
    import:           warnings
    main-is:          solution.hs
    build-depends:    base
                    , containers
                    , vector
    hs-source-dirs:   .
    default-language: Haskell2010
