cabal-version:      3.0
name:               day24
version:            0.1.0.0
common warnings
    ghc-options: -Wall
executable day24
    import:           warnings
    main-is:          solution.hs
    build-depends:    base
                    , containers
                    , split
    hs-source-dirs:   .
    default-language: Haskell2010
