cabal-version:      3.0
name:               day5
version:            0.1.0.0
common warnings
    ghc-options: -Wall
executable day5
    import:           warnings
    main-is:          solution.hs
    build-depends:    base ^>=4.17.2.1
                    , containers ^>=0.7
                    , split ^>=0.2
    hs-source-dirs:   .
    default-language: Haskell2010
