cabal-version:      3.0
name:               day6
version:            0.1.0.0
common warnings
    ghc-options: -Wall
executable day6
    import:           warnings
    main-is:          solution.hs
    build-depends:    base ^>=4.17.2.1
                    , vector ^>=0.13.2
                    , classy-prelude ^>=1.5.0
    hs-source-dirs:   .
    default-language: Haskell2010
