cabal-version:      3.0
name:               day7
version:            0.1.0.0
common warnings
    ghc-options: -Wall
executable day6
    import:           warnings
    main-is:          solution.hs
    build-depends:    base ^>=4.17.2.1
                    , text ^>=2.0
    hs-source-dirs:   .
    default-language: Haskell2010
